Opened 13 years ago
Closed 13 years ago
#4717 closed bug (fixed)
Fix Tracker Replace behavior (patch)
Reported by: | rogueeve | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The Tracker does not seem to properly handle when a single file is copied from one folder into another that has a file of the same name. The Replace All or Prompt box is popped up, even if only a single file was copied, despite the comment that says this was not the intent. This is a ridiculously simple patch that makes the code do what the comment says.
Attachments (1)
Change History (3)
by , 13 years ago
Attachment: | trackerReplace4717.patch added |
---|
comment:1 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
Note:
See TracTickets
for help on using tickets.
Funny that this wasn't caught before. Good catch!
I've made this change on my side and tested it and it looks fine.
I will commit when Berlios is back.