Apply patch from Caitlin Shaw, aka rogueeve, to fix Tracker's replace behavior for the case of 1 file.

Fixes #4717.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33427 a95241bf-73f2-0310-859d-f6bbb57e9c96